fix: horizontal scrolling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,7 @@ section.servicos {
     background-color: #f0f0f0;
     padding: 20px;
     max-width: 100vw;
-    width: 98%;
+    width: calc(96vw - 2px);
     margin: 0;
 }
 
